# ILSC-Chronos

./: .gitignore  Pipfile  pyproject.toml  readme.md
src/: app.py
src/chronos/: __init__.py  __main__.py  _logging_settings.json  app.py  app_factory.py  base_calendar_handler.py  caldav_calendar_handler.py  calendar_handler.py  chronos_event.py  config.py  helpers.py  ics_calendar_handler.py  log_factory.py  logging_helpers.py
src/chronos/calendar_handlers/: base_calendar_handler.py  caldav_calendar_handler.py  ics_calendar_handler.py
src/chronos/core/: _logging_settings.json  app_factory.py  calendar_handler.py  chronos_event.py  helpers.py
src/chronos/events/: base_chronos_event.py  caldav_chronos_event.py  ics_chronos_event.py
src/config/: app.cfg_default  calendars.json_default
src/core/: __init__.py  _logging_settings.json  app_factory.py  config.py  helpers.py  log_factory.py
src/testdata/: develop-2023-08-22-Clean.ics  develop-2023-08-22-Final.ics  testevents-2023-08-22.ics  testevents-2026-november.ics
