[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chronos"
version = "0.1.0"
dependencies = [
    "icalendar>=6.3.1",
    "caldav>=1.6.0",
    "apscheduler>=3.10",
    "colorlog",
    "regex",
]
requires-python = "~=3.11"
description = "calendar event transmission service"
readme = "readme.md"
license-files = ["LICENSE"]
keywords = ["calendar", "synchronization"]
