[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chronos"
version = "0.1.0"
dependencies = [
    "apscheduler>=3.10",
    "bs4",
    "caldav>=1.6.0",
    "colorlog",
    "icalendar>=6.3.1",
    "regex",
    "x-wr-timezone>2"
]
requires-python = "~=3.11"
description = "calendar event transmission service"
readme = "readme.md"
license-files = ["LICENSE"]
keywords = ["calendar", "synchronization"]
