[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chronos"
version = "0.1.0"
dependencies = [
    "apscheduler>=3.11",
    "bs4",
    "caldav>=2.0.1",
    "colorlog",
    "icalendar>=6.3.1",
    "regex",
    "vobject>=0.9.9",
    "x-wr-timezone>2",
]
requires-python = "~=3.11"
description = "calendar event transmission service"
readme = "readme.md"
license-files = ["LICENSE"]
keywords = ["calendar", "synchronization"]
